added more supported functions